[package]
name = "min-review-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.58"
base64 = "0.13.1"
clap = { version = "4.0.25", features = ["derive"] }
codeowners = "0.1.3"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
octocrab = "0.17.0"
serde = "1.0"
simple_logger = "4.0.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
thiserror = "1"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
unidiff = "0.3.3"
